--- a/Assignment-IntrotoCPP/Assignment-IntrotoCPP.vcxproj
+++ b/Assignment-IntrotoCPP/Assignment-IntrotoCPP.vcxproj
@@ -78,9 +78,14 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="myString.cpp" />
+    <ClCompile Include="Player.cpp" />
+    <ClCompile Include="Room.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Globals.h" />
     <ClInclude Include="myString.h" />
+    <ClInclude Include="Player.h" />
+    <ClInclude Include="Room.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
